# apograph

./: .gitignore  README.md  pyproject.toml
assays/: test_convert.py  test_shapes.py
src/apograph/: __init__.py  cli.py  convert.py  extract.py
