[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apograph"
version = "0.3.0"
description = "Convert HTML slides to PPTX with layout fidelity — Playwright extracts computed layout, python-pptx reproduces it"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Terry Li" }]
keywords = ["pptx", "html", "slide", "presentation", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]
dependencies = [
    "cyclopts>=4.0",
    "playwright>=1.40",
    "python-pptx>=1.0",
    "porin>=0.3",
]

[project.scripts]
apograph = "apograph.cli:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "RUF"]
